v1.0.0/modules/schema/pages/class/MiscCostItem.adoc
= `MiscCostItem`
:toclevels: 4


+++Various cost items that are not associated with compatible units. Examples include rental equipment, labor, materials, contractor costs, permits - anything not covered in a CU.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MiscCostItem`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/WorkIdentifiedObject.adoc[`WorkIdentifiedObject`]
*** *`MiscCostItem`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
MiscCostItem {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}





IntegerQuantity {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



WorkCostDetail {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OldWorkTask {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DesignLocation {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}





MiscCostItem -> IntegerQuantity: quantity


MiscCostItem -> Status: status


MiscCostItem -> WorkCostDetail: WorkCostDetail


MiscCostItem -> OldWorkTask: WorkTask


MiscCostItem -> DesignLocation: DesignLocation


MiscCostItem -> DiagramObject: DiagramObjects


MiscCostItem -> InstanceSet: InstanceSet


MiscCostItem -> Name: Names


MiscCostItem -> ChangeSetMember: PropertiesCIMDataObject


MiscCostItem -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<DesignLocation,`DesignLocation`>>
| 0..1
| xref::class/DesignLocation.adoc[`DesignLocation`]
| n/a

| <<WorkCostDetail,`WorkCostDetail`>>
| 0..1
| xref::class/WorkCostDetail.adoc[`WorkCostDetail`]
| n/a

| <<WorkTask,`WorkTask`>>
| 0..1
| xref::class/OldWorkTask.adoc[`OldWorkTask`]
| n/a

| <<account,`account`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++This drives the accounting treatment for this misc. item.+++

| <<costPerUnit,`costPerUnit`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++The cost per unit for this misc. item.+++

| <<costType,`costType`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The cost type for accounting, such as material, labor, vehicle, contractor, equipment, overhead.+++

| <<externalRefID,`externalRefID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++External reference identifier (e.g. purchase order number, serial number) .+++

| <<quantity,`quantity`>>
| 0..1
| xref::class/IntegerQuantity.adoc[`IntegerQuantity`]
| +++The quantity of the misc. item being assigned to this location.+++

| <<status,`status`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| n/a

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#account]
=== `account`
+++This drives the accounting treatment for this misc. item.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MiscCostItem.account`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#costPerUnit]
=== `costPerUnit`
+++The cost per unit for this misc. item.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MiscCostItem.costPerUnit`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

//[discrete]
[#costType]
=== `costType`
+++The cost type for accounting, such as material, labor, vehicle, contractor, equipment, overhead.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MiscCostItem.costType`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DesignLocation]
=== `DesignLocation`


[cols="h,4",width=65%]
|===
| URI
| `cim:MiscCostItem.DesignLocation`
| Cardinality
| 0..1
| Type
| xref::class/DesignLocation.adoc[`DesignLocation`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#externalRefID]
=== `externalRefID`
+++External reference identifier (e.g. purchase order number, serial number) .+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MiscCostItem.externalRefID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#quantity]
=== `quantity`
+++The quantity of the misc. item being assigned to this location.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MiscCostItem.quantity`
| Cardinality
| 0..1
| Type
| xref::class/IntegerQuantity.adoc[`IntegerQuantity`]


|===

//[discrete]
[#status]
=== `status`


[cols="h,4",width=65%]
|===
| URI
| `cim:MiscCostItem.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#WorkCostDetail]
=== `WorkCostDetail`


[cols="h,4",width=65%]
|===
| URI
| `cim:MiscCostItem.WorkCostDetail`
| Cardinality
| 0..1
| Type
| xref::class/WorkCostDetail.adoc[`WorkCostDetail`]


|===

//[discrete]
[#WorkTask]
=== `WorkTask`


[cols="h,4",width=65%]
|===
| URI
| `cim:MiscCostItem.WorkTask`
| Cardinality
| 0..1
| Type
| xref::class/OldWorkTask.adoc[`OldWorkTask`]


|===


