v1.1.0/modules/schema/pages/class/MiscCostItem.adoc
= `MiscCostItem`
:toclevels: 4


+++Various cost items that are not associated with compatible units. Examples include rental equipment, labor, materials, contractor costs, permits - anything not covered in a CU.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MiscCostItem`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/WorkIdentifiedObject.adoc[`WorkIdentifiedObject`]
*** *`MiscCostItem`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<DesignLocation,`DesignLocation`>>
//| [[slots_table.DesignLocation]]<<DesignLocation,`DesignLocation`>>
| 0..1 +
xref::class/DesignLocation.adoc[`DesignLocation`]
| _n/a_
| _n/a_

| <<WorkCostDetail,`WorkCostDetail`>>
//| [[slots_table.WorkCostDetail]]<<WorkCostDetail,`WorkCostDetail`>>
| 0..1 +
xref::class/WorkCostDetail.adoc[`WorkCostDetail`]
| _n/a_
| _n/a_

| <<WorkTask,`WorkTask`>>
//| [[slots_table.WorkTask]]<<WorkTask,`WorkTask`>>
| 0..1 +
xref::class/OldWorkTask.adoc[`OldWorkTask`]
| _n/a_
| _n/a_

| <<account,`account`>>
//| [[slots_table.account]]<<account,`account`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++This drives the accounting treatment for this misc. item.+++
| _n/a_

| <<costPerUnit,`costPerUnit`>>
//| [[slots_table.costPerUnit]]<<costPerUnit,`costPerUnit`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| +++The cost per unit for this misc. item.+++
| _n/a_

| <<costType,`costType`>>
//| [[slots_table.costType]]<<costType,`costType`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The cost type for accounting, such as material, labor, vehicle, contractor, equipment, overhead.+++
| _n/a_

| <<externalRefID,`externalRefID`>>
//| [[slots_table.externalRefID]]<<externalRefID,`externalRefID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++External reference identifier (e.g. purchase order number, serial number) .+++
| _n/a_

| <<quantity,`quantity`>>
//| [[slots_table.quantity]]<<quantity,`quantity`>>
| 0..1 +
xref::class/IntegerQuantity.adoc[`IntegerQuantity`]
| +++The quantity of the misc. item being assigned to this location.+++
| _n/a_

| <<status,`status`>>
//| [[slots_table.status]]<<status,`status`>>
| 0..1 +
xref::class/Status.adoc[`Status`]
| _n/a_
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#account]
=== `account`
+++This drives the accounting treatment for this misc. item.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MiscCostItem.account`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.account,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#costPerUnit]
=== `costPerUnit`
+++The cost per unit for this misc. item.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MiscCostItem.costPerUnit`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

////
[.text-left]
--
<<slots_table.costPerUnit,&#10548;>>
--
////


//[discrete]
[#costType]
=== `costType`
+++The cost type for accounting, such as material, labor, vehicle, contractor, equipment, overhead.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MiscCostItem.costType`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.costType,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DesignLocation]
=== `DesignLocation`



[cols="h,4",width=65%]
|===
| URI
| `cim:MiscCostItem.DesignLocation`
| Cardinality
| 0..1
| Type
| xref::class/DesignLocation.adoc[`DesignLocation`]


|===

////
[.text-left]
--
<<slots_table.DesignLocation,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#externalRefID]
=== `externalRefID`
+++External reference identifier (e.g. purchase order number, serial number) .+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MiscCostItem.externalRefID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.externalRefID,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#quantity]
=== `quantity`
+++The quantity of the misc. item being assigned to this location.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MiscCostItem.quantity`
| Cardinality
| 0..1
| Type
| xref::class/IntegerQuantity.adoc[`IntegerQuantity`]


|===

////
[.text-left]
--
<<slots_table.quantity,&#10548;>>
--
////


//[discrete]
[#status]
=== `status`



[cols="h,4",width=65%]
|===
| URI
| `cim:MiscCostItem.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]


|===

////
[.text-left]
--
<<slots_table.status,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#WorkCostDetail]
=== `WorkCostDetail`



[cols="h,4",width=65%]
|===
| URI
| `cim:MiscCostItem.WorkCostDetail`
| Cardinality
| 0..1
| Type
| xref::class/WorkCostDetail.adoc[`WorkCostDetail`]


|===

////
[.text-left]
--
<<slots_table.WorkCostDetail,&#10548;>>
--
////


//[discrete]
[#WorkTask]
=== `WorkTask`



[cols="h,4",width=65%]
|===
| URI
| `cim:MiscCostItem.WorkTask`
| Cardinality
| 0..1
| Type
| xref::class/OldWorkTask.adoc[`OldWorkTask`]


|===

////
[.text-left]
--
<<slots_table.WorkTask,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/DesignLocation.adoc[`DesignLocation`] | xref::class/DesignLocation.adoc#MiscCostItems[`MiscCostItems`]



| xref::class/OldWorkTask.adoc[`OldWorkTask`] | xref::class/OldWorkTask.adoc#MiscCostItems[`MiscCostItems`]



| xref::class/WorkCostDetail.adoc[`WorkCostDetail`] | xref::class/WorkCostDetail.adoc#MiscCostItems[`MiscCostItems`]


|===

